# eve-linux-terminal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eve.c  eve.h  image.h  output.txt
bash_samples/: DVD.sh  PCinfo.sh  fps.sh
bash_samples/0.0.2/: DVD.sh  script.sh  tests.sh
bash_samples/0.0.2/box/: 16text  20text  26text  box16.sh  box20.sh  box26.sh
docs/: dev_dependents.md  font.md  font_n_pic.md
include/: eveld.h
release/: install.sh  install_debug.sh  uninstall.sh
src/: CMakeLists.txt  eveld_fb.c  eveld_hal.c  eveld_main.c  eveld_ops.c  logo.c
src/demos/cli_controller/: CMakeLists.txt  cli_controller.c
src/demos/custom_font_demo/: JetBrainsMono-Italic-VariableFont_16_ASTC.glyph.h  JetBrainsMono-Italic-VariableFont_16_ASTC.xfont.h  JetBrainsMono-Italic-VariableFont_wght_16_ASTC.glyph.h  JetBrainsMono-Italic-VariableFont_wght_16_ASTC.xfont.h  JetBrainsMono-Italic-VariableFont_wght_28_ASTC.glyph.h  JetBrainsMono-Italic-VariableFont_wght_28_ASTC.xfont.h  Ubuntu_16.glyph.h  Ubuntu_16.xfont.h  Ubuntu_16_bold.glyph.h  Ubuntu_16_bold.xfont.h  Ubuntu_20.glyph.h  Ubuntu_20.xfont.h  Ubuntu_24.glyph.h  Ubuntu_24.xfont.h  Ubuntu_28.glyph.h  Ubuntu_28.xfont.h  Ubuntu_32.glyph.h  Ubuntu_32.xfont.h  custom_font_demo.c
src/projects/cli_controller/: CMakeLists.txt  JetBrainsMono-VariableFont_wght_30_L4.c  JetBrainsMono-VariableFont_wght_30_L4.json  JetBrainsMono-VariableFont_wght_30_L4.raw  JetBrainsMono-VariableFont_wght_30_L4.rawh  JetBrainsMono-VariableFont_wght_30_L4_converted_char_index.html  eveld.h  logo.c  (+5 more)
src/usb_bridge/: usb_bridge_libftdi.c
(+12 files in other folders)
